--- a/index.html
+++ b/index.html
@@ -9,11 +9,41 @@
 </head>
 <body>
     <div id="root" class="container">
-        <div class="element">
-             <strong>This</strong> is the best day of my <div>life</div> 
-        </div>
-        <div class="another"><haha></div>
-        hello    
+        <nav>
+            <ul>
+                <li>
+                    <a href="#welcome">Welcome</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#services">Services</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+            Home
+            Abaut
+            Services
+            Contact
+
+        </nav>
+        <section id="welcome">
+            <h1>Thank you for visiting our site</h1>
+        </section>   
+        <section id="about">
+            <h1>About</h1>
+        </section>
+        <section id="service">
+            <h1>Services</h1>
+        </section>
+        <section id="contact">
+            <h1>Contact</h1>
+        </section>
+        <footer>All right reserved</footer>
+
     </div>
     
 </body>
