--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                     <a href="#contact">Contact</a>
                 </li>
             </ul>
-            Home
-            Abaut
-            Services
-            Contact
+           
 
         </nav>
         <section id="welcome">
@@ -35,6 +32,7 @@
         </section>   
         <section id="about">
             <h1>About</h1>
+            <button class="more">read more</button>
         </section>
         <section id="service">
             <h1>Services</h1>
